<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSignature"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/Button_menu"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:background="#00ffffff"
                android:onClick="btnHeader"
                android:src="@drawable/ic_menu_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/Button_home"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:background="#00ffffff"
                android:onClick="btnHeader"
                android:src="@drawable/ic_home_white_24dp" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="42dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_corner"
            android:src="@drawable/ic_image_gray_240dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/information"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/email"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/loginMsg"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/create_nickname_msg"
                    android:textSize="18sp" />
            </LinearLayout>



            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:onClick="onClick"
                android:text="@string/login"
                android:textColor="@color/colorSignature"
                android:background="@drawable/btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:textColor="@color/colorSignature"
                    android:background="@drawable/btn"
                    android:text="@string/change_nickname" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:onClick="onClick"
                    android:textColor="@color/colorSignature"
                    android:background="@drawable/btn"
                    android:text="@string/logout" />

                <Button
                    android:id="@+id/btn_leave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:textColor="@color/colorSignature"
                    android:background="@drawable/btn"
                    android:text="@string/deactivate" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/drawer" />
</androidx.drawerlayout.widget.DrawerLayout>