<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context=".Popup.RequestPopup">

    <!-- 타이틀바 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/colorSignature"
            android:gravity="center"
            android:text="@string/request"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>
    <!-- //end 타이틀바 -->

    <!-- Notice -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/translate_request"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/request_song" />

                <RadioButton
                    android:id="@+id/others_request"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/others" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/radio_translate_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_song" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/singer"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/radio_others_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/others" />

            <EditText
                android:id="@+id/et_others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!-- Notice -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#66bdbdbd" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="sendEmail"
            android:padding="16dp"
            android:text="@string/send"
            android:textColor="@color/colorSignature"
            android:textSize="15sp" />
    </LinearLayout>
    <!--// 닫기 버튼 -->

</LinearLayout>